line and mirror with focal length and angles

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 		<script src="p5.dom.js">
 		</script>
 		<button id="btn1" onclick=lineFlag()>line</button>
-		
+		<button id="btn2" onclick=mirrorFlag()>mirror</button>
+		<div id="test"></div>
+	</body>
 </html>
