--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		</script>
 		<button id="btn1" onclick=lineFlag()>line</button>
 		<button id="btn2" onclick=mirrorFlag()>mirror</button>
+		<button id="btn3" onclick=lensFlag()>lens</button>
 		<div id="test"></div>
 	</body>
 </html>
