curved mirror reflection done

--- a/simulighter.html
+++ b/simulighter.html
@@ -39,7 +39,7 @@
 		<ul style="list-style-type: none;" class="toolbar">
 			<li><button id="ray-btn">Ray</button></li>
 			<li><button id="lens-btn">Lens</button></li>
-			<li><button id="mirror-btn">Mirror</button></li>
+			<li><button id="mirror-btn">Curved Mirror</button></li>
 			<li><button id="plain-btn">Plain Mirror</button></li>
 			<li><button id="point-btn">Point</button></li>
 
